# Habanero-Game-Engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/editor/: Cargo.toml
apps/editor/src/: main.rs
apps/runtime-demo/: Cargo.toml
apps/runtime-demo/src/: main.rs
assets/src/: sample_scene.json
benches/: ecs_stress.rs
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: lib.rs
crates/engine-assets/tests/: load_and_get.rs
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/engine-core/tests/: engine_tick.rs
crates/engine-ecs/: Cargo.toml
crates/engine-ecs/src/: lib.rs
crates/engine-ecs/tests/: throughput.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor/src/: lib.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/src/: lib.rs
crates/engine-render/: Cargo.toml
crates/engine-render/src/: lib.rs  vulkan.rs
crates/engine-scene/: Cargo.toml
crates/engine-scene/src/: lib.rs
crates/engine-scene/tests/: scene_roundtrip.rs
crates/engine-scripting/: Cargo.toml
crates/engine-scripting/src/: lib.rs
docs/: performance.md  setup.md  technical-deep-dive.md
docs/adr/: 0001-ownership-and-frame-data.md
docs/architecture/: ecs.md  overview.md  rendering.md  subsystems.md
