[package]
name = "editor-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
engine-core = { path = "../../crates/engine-core" }
engine-editor = { path = "../../crates/engine-editor" }
engine-ecs = { path = "../../crates/engine-ecs" }
engine-scene = { path = "../../crates/engine-scene" }
