[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
glam.workspace = true
parking_lot.workspace = true
rayon.workspace = true
tracing.workspace = true
winit.workspace = true
engine-assets = { path = "../engine-assets" }
engine-audio = { path = "../engine-audio" }
engine-ecs = { path = "../engine-ecs" }
engine-physics = { path = "../engine-physics" }
engine-render = { path = "../engine-render" }
engine-scene = { path = "../engine-scene" }
engine-scripting = { path = "../engine-scripting" }
