[package]
name = "engine-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ash.workspace = true
ash-window.workspace = true
bytemuck.workspace = true
glam.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
winit.workspace = true
engine-ecs = { path = "../engine-ecs" }
engine-scene = { path = "../engine-scene" }
